--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,10 @@ chardet==3.0.4
 Django==2.0
 djangorestframework==3.7.3
 idna==2.6
+mock==2.0.0
+pbr==3.1.1
 psycopg2==2.7.3.2
 pytz==2017.3
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
