--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,8 @@
 dev-env
 .vscode
 firehose/__pycache__
-
-
+firehost.txt
+testdata.json
+server/__pycache__
+server/migrations/__pycache__
+firehose.txt
