--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+amqp==2.2.2
+billiard==3.5.0.3
+celery==4.1.0
 certifi==2017.11.5
 chardet==3.0.4
 Django==2.0
 djangorestframework==3.7.3
 idna==2.6
+kombu==4.1.0
 mock==2.0.0
 pbr==3.1.1
 psycopg2==2.7.1
@@ -10,3 +14,4 @@ pytz==2017.3
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
+vine==1.1.4
